*** netmeta, version 6.6-6, 2019-mm-dd ***

 ** Major changes **

  * Use roxygen2 for development of R package netmeta

  * New function plot.netrank() to produce image plot of P-scores
    
 ** Bug fixes **

  * netmeta():
    - no error if argument 'studlab' is missing

  * netgraph():
    - argument 'seq' equal to "optimal" works for a single design


**** netmeta, version 1.0-1, 2019-01-02 ***

 ** User-visible changes **

  * Revision of help page examples
    - to reflect changes in netmeta, versions 0.9-8 and 1.0-0
    - to reduce runtime below 5 seconds (CRAN requirement)


*** netmeta, version 1.0-0, 2018-12-20 ***

 ** Major changes **

  * Orestis Efthimiou <oremiou@gmail.com> is a new co-author of R
    package netmeta

  * New function netmetabin() for network meta-analysis of binary data
    using the Mantel-Haenszel method or the non-central hypergeometric
    distribution

  * New function funnel.netmeta() for 'comparison-adjusted' funnel
    plots

  * New function forest.netcomb() for forest plots of additive network
    meta-analysis

  * New functions netbind(), forest.netbind(), and print.netbind() to
    combine network meta-analysis objects and to generate a forest
    plot with results of several network meta-analyses

  * Separate Indirect from Direct Design Evidence (SIDDE) method
    implemented in netsplit()

  * All network comparisons can be included in a forest plot

  * Circular network graphs with minimal number of crossings available

  * Default setting for levels of confidence intervals can be
    specified using R function settings.meta(); the default is still
    0.95, i.e., 95% confidence intervals are computed

  * New datasets: Gurusamy2011 and Dong2013

 ** User-visible changes **

  * netmeta():
    - new list elements:
      - 'k.trts' with number of studies evaluating a treatment
      - 'n.trts' with number of observations receiving a treatment
      - 'events.trts' with number of events observed for a treatment