@@ -823,7 +823,7 @@ pairwise <- function(treat,
                         dat$event2, dat$n2,
                         incr = dat$incr, addincr = TRUE,
                         allstudies = allstudies,
-                        ...)
+                        warn = warn, ...)
           ##
           dat$TE   <- m1$TE
           dat$seTE <- m1$seTE
@@ -848,8 +848,8 @@ pairwise <- function(treat,
       }
     }
   }
-
-
+  
+  
   if (type == "continuous") {
     if (length(n) != narms)
       stop("Different length of lists 'treat' and 'n'.")
@@ -935,7 +935,7 @@ pairwise <- function(treat,
         if (nrow(dat) > 0) {
           m1 <- metacont(dat$n1, dat$mean1, dat$sd1,
                          dat$n2, dat$mean2, dat$sd2,
-                         ...)
+                         warn = warn, ...)
           ##
           dat$TE   <- m1$TE
           dat$seTE <- m1$seTE
@@ -1035,7 +1035,8 @@ pairwise <- function(treat,
         ##
         if (nrow(dat) > 0) {
           m1 <- metagen(dat$TE1 - dat$TE2,
-                        sqrt(dat$seTE1^2 + dat$seTE2^2), ...)
+                        sqrt(dat$seTE1^2 + dat$seTE2^2),
+                        warn = warn, ...)
           ##
           dat$TE <- m1$TE
           dat$seTE <- m1$seTE
@@ -1133,7 +1134,7 @@ pairwise <- function(treat,
                         dat$event2, dat$time2,
                         incr = dat$incr, addincr = TRUE,
                         allstudies = allstudies,
-                        ...)
+                        warn = warn, ...)
           ##
           dat$TE <- m1$TE
           dat$seTE <- m1$seTE
